<resources>
    <string name="app_name">AuroScholar</string>
    <string name="partnerKey">cHsPa895adcc1632d4ea489b0006d4e72865f</string>
    <string name="facebook_app_id">376950950122226</string>
    <string name="internet_check">Oops, No internet found.Please check your connection or try again.</string>
    <string name="default_error">Unable to connect. Please try after sometime.</string>
    <string name="exist_grouperror" translatable="false">Group name already exist !</string>
    <string name="terms_of_service">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back_button">BACK</string>
    <string name="confirm_otp">CONFIRM OTP</string>
    <string name="not_receive_resend">Not Receive ? Resend</string>
    <string name="code_valid_for">(Code valid for)</string>
    <string name="intent_phone_number">intentphoneNumber</string>
    <string name="userOtp">userOtp</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="change_mobile_no">Change Number</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="rs">₹</string>
    <string name="score_msg">Up to ₹1000 Scholarship, ₹50 per quiz if you score more than 8/10</string>
    <string name="get_scholarship">Get Scholarship</string>
    <string name="scholarship">Scholarship</string>
    <string name="retry">Retry</string>
    <string name="id_proof_front_side">ID Proof Front Side</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="next">Next</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File chosen</string>
    <string name="id_proof_back_side">ID Proof Back Side</string>
    <string name="school_id_card">School ID Card</string>
    <string name="upload_profile_pic">Upload Your Photo</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="modify">Want To Modify Uploaded File</string>
    <string name="document_all_four_error_msg">Please select the all four document first</string>
    <string name="question_bank_powered_by_cambridge">Maths Questions powered by Cambridge</string>
    <string name="privacy_policy_auro">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="permission_error_msg">For taking the quiz camera permission is must.</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="upload_doc_text_msg">If you  face any issues please call us at +919667480783</string>
    <string name="english">English</string>
    <string name="sucessfully_uploaded">Sucessfully Uploaded</string>
    <string name="auro_scholar_demographics_details">Auro Scholar Demographics Details</string>
    <string name="gender">Student Gender<font color='#FF0000'>*</font></string>
    <string name="school_type">Student School Type</string>
    <string name="board">Student School Board</string>
    <string name="language_medium">Student School Language medium</string>
    <string-array name="genderlist">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="genderlist_profile">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="boardlist">
        <item>Select Board</item>
        <item>CBSE</item>
        <item>ICSE</item>
        <item>GSEB</item>
        <item>Other</item>
    </string-array>
    <string-array name="schooltypelist">
        <item>Select School Type</item>
        <item>Private School</item>
        <item>Government School</item>
        <item>SHBCT</item>
        <item>Other</item>
    </string-array>
    <string-array name="languagelist">
        <item>Please Select Language Medium</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Punjabi</item>
        <item>Gujarati</item>
        <item>Tamil</item>
        <item>Kannada</item>
        <item>Marathi</item>
    </string-array>
    <string-array name="privateTutionList">
        <item>Select Private Tution</item>
        <item>Yes</item>
        <item>NO</item>
    </string-array>
    <string-array name="privateTypeList">
        <item>Select Tution Type</item>
        <item>Group</item>
        <item>Personal</item>
        <item>Online</item>
    </string-array>
    <string name="bullted_list">
          \u25CF  Please read the all instructions carefully,
       \n \u25CF Question bank is powered by Cambridge.
        \n \u25CF Quiz contains the 10 questions.
        \n \u25CF Please read each and every question carefully.
        \n \u25CF Camera  will be only used for fraud control purpose.

    </string>
    <string name="bullet_one">Please read the all instructions carefully</string>
    <string name="bullet_two">Maths Question bank is powered by Cambridge</string>
    <string name="bullet_three">Quiz contains the 10 questions.</string>
    <string name="bullet_four">Please read each and every question carefully.</string>
    <string name="bullet_five">Camera  will be only used for fraud control purpose.</string>
    <string name="document_uploaded">Document Uploaded</string>
    <string name="verification_is_in_process">Verification is in process</string>
    <string name="document_verified">Document Verified</string>
    <string name="declined">Declined</string>
    <string name="you_will_see_transfer">You will see transfer option after your document is verified</string>
    <string name="tranfer_money">Transfer Scholarship</string>
    <string name="invite_by">Send Invite to Friend</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="or">Or</string>
    <string name="share_with_other">Invite Student</string>
    <string name="invite">Invite</string>
    <string name="friends_leadeboard">Friends \nLeaderboard</string>
    <string name="challenge_your_friends">Challenge Your Friends</string>
    <string name="invite_them">Invite them</string>
    <string name="please_put_your_face_inside_the_box">Please put your face inside the box</string>
    <string name="call_our_customercare">Please call our customer care number to get your scholarship</string>
    <string name="upload_document">Upload KYC Document</string>
    <string name="please_upload_the_document">Please Upload the Document</string>
    <string name="upload_verification">KYC Verification</string>
    <string name="transfer_scholarship">Transfer Scholarship</string>
    <string name="approved">Approved</string>
    <string name="save_more_details">Save More Details?</string>
    <string name="teacher_name">Teacher Name <font color='#FF0000'>*</font></string>
    <string name="email_address">Parent Email Address</string>
    <string name="mobile_number">Mobile Number<font color='#FF0000'>*</font></string>
    <string name="skip_for_now"><u>Skip For Now</u></string>
    <string name="default_message">Lorem ipsum is simply dummy text of the printing and typeseeting industry lorem ipsum</string>
    <string name="total_points">Total Points :</string>
    <string name="wallet_cash">Wallet Cash :</string>
    <string name="teacher_profile">Teacher Profile</string>
    <string name="subjects_you_teach_till">Subjects You Teach Till 12th<font color='#FF0000'>*</font></string>
    <string name="school_name">School Name<font color='#FF0000'>*</font></string>
    <string name="state">State<font color='#FF0000'></font></string>
    <string name="city">City<font color='#FF0000'>*</font></string>
    <string name="choose_your_state">Choose Your State</string>
    <string name="upload_govt_id">Aadhar Front Side</string>
    <string name="upload_govt_id_back_side">Aadhar Back Side</string>
    <string name="upload_school_id">School ID Card</string>
    <string name="upload_picture">Upload Your Photo</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="information">Information</string>
    <string name="friends_ke_bina_kya_fun">Friends ke bina kya fun!</string>
    <string name="invite_friend_refrral">Hi! An exclusive invite just for you! Join me on AuroScholar App, challenge friends and get scholarship &amp; Certificates everyday! \n Click to accept my invitation &amp; Install App - ></string>
    <string name="challenge_msg">just challenged you in a quiz! Can you beat their score?</string>
    <string name="saved">The changes were saved successfully</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="address_not_found">Address not found</string>
    <string name="getting_webinar_slots">Getting Webinar\nSlots</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="auro_scholar_wallet">You have got ₹50 Scholarship in your\nAuro Scholar Wallet!</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="congratulation_new">Congratulations</string>
    <string name="impossible">It always seems impossible until it’s done.</string>
    <string name="accept">Accept</string>
    <string name="challenge">Challenge</string>
    <string name="taking_private_tutions">Student Taking Private Tutions ?</string>
    <string name="taking_type">Tution Type</string>
    <string name="challenged_you">Challenged You</string>
    <string name="book_free_tutoring_session">Book Free Tutoring Session</string>
    <string name="add_friend">Add Friend</string>
    <string name="classes">Classes You Teach</string>
    <string name="enter_the_paytm_number">Enter the Paytm Number</string>
    <string name="enter_the_upi_address">Enter the UPI Address</string>
    <string name="ok">OK</string>
    <string name="language">Language</string>
    <string name="select_your_grade">Select Your Grade</string>
    <string name="confirm_grade">CONFIRM GRADE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ideal_app_for_nyour_education">Ideal App For\nYour Education</string>
    <string name="send_otp">SEND OTP</string>
    <string name="by_continuing">By continuing, your agree to our</string>
    <string name="and">and</string>
    <string name="opt_sent_number_txt">OTP sent on this number</string>
    <string name="enter_otp_txt">Enter the OTP</string>
    <string name="press_again_for_exit">Press again for exit</string>
    <string name="quiz_instruction">Quiz Instructions</string>
    <string name="quiz_exit_txt">Are you sure you want to quit the quiz ?</string>
    <string name="bundledashboardresmodel">dashboardResModel</string>
    <string name="bundleassignmentreqmodel">assignmentReqModel</string>
    <string name="auro_hey">Hey!</string>
    <string name="auro_login">Login</string>
    <string name="auro_signUp">Signup</string>
    <string name="login_to_your_account">Login or Signup</string>
    <string name="set_password">Set Password</string>
    <string name="login_with_otp">Login With OTP?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_exit">Continue</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="mobile_number_username">Mobile number/Username</string>
    <string name="password">Password</string>
</resources>